--- a/core/index.html
+++ b/core/index.html
@@ -52,19 +52,16 @@ description: Minimal theme for your site.
                 <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+                      </svg></i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
                 </nav>
                 <hr class="thin"/>
                 <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/core/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/404.html">404</a>
+                      </svg></i></i><a href="/dove/core/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/404.html">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks.html">Code blocks</a>
+                <nav class="mv"><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks.html">Code blocks</a>
                 </nav>
               </div>
             </article>
