--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -32,11 +32,8 @@ description: Theme preview.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
-              </div>
+              <nav class="mv"><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
+              </nav>
               <hr class="thin"/>
             </div>
           </nav>
