--- a/nova/index.html
+++ b/nova/index.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Nova
 description: New theme for your site.
 ---
 <!DOCTYPE html>
 <html class="_nova_layout no_js" lang="en-US">
-<!-- path   : nova/index.html -->
-<!-- layout : _source/_layouts/nova -->
+<!-- path        : nova/index.html -->
+<!-- layout      : _source/_layouts/nova -->
+<!-- title       : Nova -->
+<!-- description : New theme for your site. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -61,7 +63,7 @@ description: New theme for your site.
                       </svg></i></i><a href="/dove/nova/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/404.html">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_code-blocks.html">Code blocks</a>
+                <nav class="mv"><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_code-blocks.html">Code blocks</a>
                 </nav>
               </div>
             </article>
