--- a/prime/index.html
+++ b/prime/index.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Prime
 description: Simple theme for your site.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : prime/index.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : prime/index.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Prime -->
+<!-- description : Simple theme for your site. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -61,7 +63,7 @@ description: Simple theme for your site.
                       </svg></i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks.html">Code blocks</a>
+                <nav class="mv"><a href="/dove/prime/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks.html">Code blocks</a>
                 </nav>
               </div>
             </article>
