--- a/test_pug.html
+++ b/test_pug.html
@@ -1,15 +1,17 @@
 ---
 index: false
 use_footer: edit_link_only
-layout: html
+layout: raw
 use_pug: true
 title: Test Pug
 description: Testing something here.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : test_pug.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : test_pug.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Test Pug -->
+<!-- description : Testing something here. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
