--- a/core/index.html
+++ b/core/index.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Core
 description: Minimal theme for your site.
 ---
 <!DOCTYPE html>
 <html class="_core_layout no_js" lang="en-US">
-<!-- path   : core/index.html -->
-<!-- layout : _source/_layouts/core -->
+<!-- path        : core/index.html -->
+<!-- layout      : _source/_layouts/core -->
+<!-- title       : Core -->
+<!-- description : Minimal theme for your site. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -61,7 +63,7 @@ description: Minimal theme for your site.
                       </svg></i></i><a href="/dove/core/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/404.html">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks.html">Code blocks</a>
+                <nav class="mv"><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks.html">Code blocks</a>
                 </nav>
               </div>
             </article>
