--- a/core/post.html
+++ b/core/post.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Post
 description: Post template.
 ---
 <!DOCTYPE html>
 <html class="_core_layout no_js" lang="en-US">
-<!-- path   : core/post.html -->
-<!-- layout : _source/_layouts/core -->
+<!-- path        : core/post.html -->
+<!-- layout      : _source/_layouts/core -->
+<!-- title       : Post -->
+<!-- description : Post template. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
