--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 ---
-layout: html
+layout: raw
 use_pug: true
 title: Dove
 description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : index.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : index.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Dove -->
+<!-- description : A theme development project. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
