--- a/mallet/index.html
+++ b/mallet/index.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Techie Joe's Mallet
 description: Mallet is a Jekyll theme for GitHub Pages.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path   : mallet/index.html -->
-<!-- layout : _source/_layouts/mallet -->
+<!-- path        : mallet/index.html -->
+<!-- layout      : _source/_layouts/mallet -->
+<!-- title       : Techie Joe's Mallet -->
+<!-- description : Mallet is a Jekyll theme for GitHub Pages. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -18,6 +20,10 @@ description: Mallet is a Jekyll theme for GitHub Pages.
     <meta id="_theme_color" name="theme-color" content="#222"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+    <style>
+      ._article h1 { border:0;font-size:3em;font-weight:bold }
+      ._footer { margin-top:3rem }
+    </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -37,13 +43,16 @@ description: Mallet is a Jekyll theme for GitHub Pages.
           </nav>
           <main class="_main">
             <article class="_article">
-              <div class="_layout">{%- capture about %}{%- include_relative about.md %}{%- endcapture %}
+              <div class="_layout">{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
 {{ about | markdownify }}
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><b>About</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
