--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Preview
 description: Theme preview.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path   : mallet/preview.html -->
-<!-- layout : _source/_layouts/mallet -->
+<!-- path        : mallet/preview.html -->
+<!-- layout      : _source/_layouts/mallet -->
+<!-- title       : Preview -->
+<!-- description : Theme preview. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -32,7 +34,7 @@ description: Theme preview.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a>
               </nav>
               <hr class="thin"/>
             </div>
@@ -46,6 +48,9 @@ description: Theme preview.
           </main>
           <footer class="_footer">
             <div class="_layout">
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
