--- a/mallet/test.html
+++ b/mallet/test.html
@@ -2,15 +2,15 @@
 index: false
 layout: raw
 use_pug: true
-title: Page
-description: Page template.
+title: About
+description: About Techie Joe's Mallet.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path        : mallet/page.html -->
+<!-- path        : mallet/about.html -->
 <!-- layout      : _source/_layouts/mallet -->
-<!-- title       : Page -->
-<!-- description : Page template. -->
+<!-- title       : About -->
+<!-- description : About Techie Joe's Mallet. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -20,6 +20,10 @@ description: Page template.
     <meta id="_theme_color" name="theme-color" content="#222"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+    <style>
+      ._article h1 { border:0;font-size:3em;font-weight:bold }
+      ._footer { margin-top:3rem }
+    </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -34,34 +38,25 @@ description: Page template.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><b>Page</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
-              </div>
-              <hr class="thin"/>
+              <style>._nav{display:none !important}</style>
             </div>
           </nav>
           <main class="_main">
             <article class="_article">
-              <div class="_layout">
-                <h1>Page title</h1>
-                <p><code>// page content</code></p>
-                <div class="mt-6"></div>
-                <hr/>
-                <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}
-{{ pages | markdownify }}
+              <div class="_layout">{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
+{{ about | markdownify }}
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <p><code>// site footer</code></p>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates.html">Templates</a>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/page.html.pug">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/about.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
