--- a/mallet/test_code-blocks.html
+++ b/mallet/test_code-blocks.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Test Code Blocks
 description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path   : mallet/test_code-blocks.html -->
-<!-- layout : _source/_layouts/mallet -->
+<!-- path        : mallet/test_code-blocks.html -->
+<!-- layout      : _source/_layouts/mallet -->
+<!-- title       : Test Code Blocks -->
+<!-- description : A theme development project. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -32,7 +34,7 @@ description: A theme development project.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+              <nav class="mv"><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
               </nav>
               <hr class="thin"/>
             </div>
@@ -46,6 +48,9 @@ description: A theme development project.
           </main>
           <footer class="_footer">
             <div class="_layout">
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
