--- a/nova/legacy.html
+++ b/nova/legacy.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Legacy
 description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_nova_layout no_js" lang="en-US">
-<!-- path   : nova/legacy.html -->
-<!-- layout : _source/_layouts/nova -->
+<!-- path        : nova/legacy.html -->
+<!-- layout      : _source/_layouts/nova -->
+<!-- title       : Legacy -->
+<!-- description : A theme development project. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
