--- a/nova/test_code-blocks.html
+++ b/nova/test_code-blocks.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Test Code Blocks
 description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_nova_layout no_js" lang="en-US">
-<!-- path   : nova/test_code-blocks.html -->
-<!-- layout : _source/_layouts/nova -->
+<!-- path        : nova/test_code-blocks.html -->
+<!-- layout      : _source/_layouts/nova -->
+<!-- title       : Test Code Blocks -->
+<!-- description : A theme development project. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -38,7 +40,7 @@ description: A theme development project.
                     </svg></i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
               </div>
               <hr class="thin"/>
-              <nav class="mv"><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+              <nav class="mv"><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
               </nav>
               <hr class="thin"/>
             </div>
