--- a/prime/404.html
+++ b/prime/404.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Not found
 description: We can't find what you are looking for.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : prime/404.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : prime/404.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Not found -->
+<!-- description : We can't find what you are looking for. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
