--- a/prime/home.html
+++ b/prime/home.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Home
 description: Home template
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : prime/home.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : prime/home.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Home -->
+<!-- description : Home template -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
