--- a/prime/page.html
+++ b/prime/page.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Page
 description: Page template.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : prime/page.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : prime/page.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Page -->
+<!-- description : Page template. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
