--- a/prime/preview.html
+++ b/prime/preview.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Preview
 description: Theme preview.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : prime/preview.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : prime/preview.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Preview -->
+<!-- description : Theme preview. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
