--- a/prime/test_colors.html
+++ b/prime/test_colors.html
@@ -1,14 +1,16 @@
 ---
 index: false
-layout: html
+layout: raw
 use_pug: true
 title: Test Colors
 description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path   : prime/test_colors.html -->
-<!-- layout : _source/_layouts/prime -->
+<!-- path        : prime/test_colors.html -->
+<!-- layout      : _source/_layouts/prime -->
+<!-- title       : Test Colors -->
+<!-- description : A theme development project. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -38,7 +40,7 @@ description: A theme development project.
                     </svg></i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
               </div>
               <hr class="thin"/>
-              <nav class="mv"><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks.html">Code blocks</a>
+              <nav class="mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks.html">Code blocks</a>
               </nav>
               <hr class="thin"/>
             </div>
