update mallet pages

--- a/mallet/templates.html
+++ b/mallet/templates.html
@@ -38,7 +38,7 @@ description: Essential collection suitable for any website.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
               </nav>
               <hr class="thin"/>
             </div>
@@ -48,26 +48,18 @@ description: Essential collection suitable for any website.
               <div class="_layout">
                 <h1 class="hero">Basic Mallet Templates</h1>
                 <h2 class="subt">⚒️ Essential collection suitable for any website</h2>
-                <p>This collection value <strong>simplicity and versatility</strong> &mdash; Designed for those who is launching a personal blog, a professional portfolio, or a small business landing page. These templates provide the perfect clean slate to bring your vision to life.</p>
+                <p>This collection value <strong>simplicity and versatility</strong> &mdash; Get the perfect clean slate for a personal blog, a portfolio, or a quick start-up page.</p>
                 <div style="margin-bottom:3rem"></div>
                 <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                      </svg></i></i><a href="/dove/mallet/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404">404</a>
                 </nav>
-                <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
+                <nav class="mv"><b>Md</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404.html">404</a>
+                      </svg></i></i><a href="/dove/mallet/md/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
                 </nav>
-                <div style="margin-top:3rem"></div>
-                <div class="box">
-                  <nav><b>Test</b><i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
-                  </nav>
-                </div>
                 <div style="margin-top:3rem"></div>
                 <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!</p>
               </div>
@@ -76,7 +68,7 @@ description: Essential collection suitable for any website.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
