--- a/mallet/post.html
+++ b/mallet/post.html
@@ -37,7 +37,7 @@ description: Post template.
               <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>Post</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                    </svg></i></i><a href="/dove/mallet/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>Post</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404">404</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates"><small>(more..)</small></a>
               </div>
               <hr class="thin"/>
             </div>
