--- a/mallet/test.html
+++ b/mallet/test.html
@@ -2,15 +2,15 @@
 index: false
 layout: raw
 use_pug: true
-title: Basic Mallet Templates
-description: Essential collection suitable for any website.
+title: Test
+description: Test page.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path        : mallet/templates.html -->
+<!-- path        : mallet/test.html -->
 <!-- layout      : _source/_layouts/mallet -->
-<!-- title       : Basic Mallet Templates -->
-<!-- description : Essential collection suitable for any website. -->
+<!-- title       : Test -->
+<!-- description : Test page. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -20,10 +20,6 @@ description: Essential collection suitable for any website.
     <meta id="_theme_color" name="theme-color" content="#222"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
-    <style>
-      ._article h1 { border:0 }
-      ._article .subt { padding-bottom:1.3em;margin-top:-0.7em }
-    </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -38,7 +34,7 @@ description: Essential collection suitable for any website.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates">Templates</a><i class="_icon"><i class="itext">&bull;</i></i><b>Test</b>
               </nav>
               <hr class="thin"/>
             </div>
@@ -46,42 +42,17 @@ description: Essential collection suitable for any website.
           <main class="_main">
             <article class="_article">
               <div class="_layout">
-                <h1 class="hero">Basic Mallet Templates</h1>
-                <h2 class="subt">⚒️ Essential collection suitable for any website</h2>
-                <p>This collection value <strong>simplicity and versatility</strong> &mdash; Designed for those who is launching a personal blog, a professional portfolio, or a small business landing page. These templates provide the perfect clean slate to bring your vision to life.</p>
-                <div style="margin-bottom:3rem"></div>
-                <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
                 </nav>
-                <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404.html">404</a>
+                <hr class="thin"/>
+                <nav class="mv"><a href="/dove/mallet/test_page">Test Page</a>
                 </nav>
                 <div style="margin-top:3rem"></div>
-                <div class="box">
-                  <nav><b>Test</b><i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
-                  </nav>
-                </div>
-                <div style="margin-top:3rem"></div>
-                <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!</p>
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
-              <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a>
-              </nav>
-              <hr class="thin"/>
-              <p class="text-right text-grey"><small>
-                  This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/templates.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
