--- a/mallet/test_colors.html
+++ b/mallet/test_colors.html
@@ -34,7 +34,10 @@ description: A theme development project.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates">Templates</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
+              </nav>
+              <hr class="thin"/>
+              <nav class="mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
               </nav>
               <hr class="thin"/>
             </div>
@@ -49,7 +52,7 @@ description: A theme development project.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
+              <nav class="_common_nav mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
