--- a/nova/index.html
+++ b/nova/index.html
@@ -54,16 +54,16 @@ description: New theme for your site.
                 <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
+                      </svg></i></i><a href="/dove/nova/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404">404</a>
                 </nav>
                 <hr class="thin"/>
                 <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/nova/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/404.html">404</a>
+                      </svg></i></i><a href="/dove/nova/md/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/404">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_code-blocks.html">Code blocks</a>
+                <nav class="mv"><a href="/dove/nova/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_code-blocks">Code blocks</a>
                 </nav>
               </div>
             </article>
