--- a/prime/test_colors.html
+++ b/prime/test_colors.html
@@ -37,10 +37,10 @@ description: A theme development project.
               <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                    </svg></i></i><a href="/dove/prime/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404">404</a>
               </div>
               <hr class="thin"/>
-              <nav class="mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks.html">Code blocks</a>
+              <nav class="mv"><b>Colors</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks">Code blocks</a>
               </nav>
               <hr class="thin"/>
             </div>
