--- a/mallet/index.html
+++ b/mallet/index.html
@@ -24,6 +24,19 @@ description: Mallet is a Jekyll theme for GitHub Pages.
       ._article h1 { border:0;font-size:3em;font-weight:bold }
       ._footer { margin-top:3rem }
     </style>
+    <style>
+      ._article h2:first-of-type { padding-bottom:1.3em;margin-top:-0.7em }
+      ._article #icon {
+        position: absolute;
+        font-size:1em;
+        opacity:.2;
+        right:10em;
+        line-height:1;
+        z-index:-1;
+        top:5em;
+        scale:14;
+      }
+    </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -43,7 +56,10 @@ description: Mallet is a Jekyll theme for GitHub Pages.
           </nav>
           <main class="_main">
             <article class="_article">
-              <div class="_layout">{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
+              <div class="_layout">
+                <div style="position:relative">
+                  <div id="icon">⚒️</div>
+                </div>{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
 {{ about | markdownify }}
               </div>
             </article>
@@ -51,7 +67,7 @@ description: Mallet is a Jekyll theme for GitHub Pages.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates">Templates</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
