--- a/mallet/samples.html
+++ b/mallet/samples.html
@@ -2,15 +2,15 @@
 index: false
 layout: raw
 use_pug: true
-title: Basic Mallet Templates
-description: Essential collection suitable for any website.
+title: Samples
+description: Theme samples.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path        : mallet/templates.html -->
+<!-- path        : mallet/samples.html -->
 <!-- layout      : _source/_layouts/mallet -->
-<!-- title       : Basic Mallet Templates -->
-<!-- description : Essential collection suitable for any website. -->
+<!-- title       : Samples -->
+<!-- description : Theme samples. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -21,8 +21,21 @@ description: Essential collection suitable for any website.
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
     <style>
-      ._article h1 { border:0 }
-      ._article .subt { padding-bottom:1.3em;margin-top:-0.7em }
+      ._article h2:first-of-type {
+        border:0;
+        margin-bottom:2rem;
+        margin-top:-0.5em;
+      }
+      ._article #icon {
+        position: absolute;
+        font-size:1em;
+        opacity:.2;
+        right:10em;
+        line-height:1;
+        z-index:-1;
+        top:5em;
+        scale:14;
+      }
     </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
@@ -38,7 +51,7 @@ description: Essential collection suitable for any website.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Samples</b>
               </nav>
               <hr class="thin"/>
             </div>
@@ -46,10 +59,11 @@ description: Essential collection suitable for any website.
           <main class="_main">
             <article class="_article">
               <div class="_layout">
-                <h1 class="hero">Basic Mallet Templates</h1>
-                <h2 class="subt">⚒️ Essential collection suitable for any website</h2>
-                <p>This collection value <strong>simplicity and versatility</strong> &mdash; Get the perfect clean slate for a personal blog, a portfolio, or a quick start-up page.</p>
-                <div style="margin-bottom:3rem"></div>
+                <div class="relative">
+                  <div id="icon">⚒️</div>
+                </div>
+                <h1 class="hero">Theme samples</h1>
+                <h2>⚒️ Essential templates for any website</h2>
                 <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -61,19 +75,28 @@ description: Essential collection suitable for any website.
                       </svg></i></i><a href="/dove/mallet/md/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
                 </nav>
                 <div style="margin-top:3rem"></div>
-                <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!</p>
+                <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!
+                  
+                </p>
+                <hr class="thin"/>
+                <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
+                </nav>{%- if site.github.environment == 'development' -%}
+                <hr class="thin"/>
+                <nav class="mv"><a href="/dove/mallet/test">Test page</a>
+                </nav>{%- endif %}
+                <div style="margin-top:3rem"></div>
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Templates</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Samples</b>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/templates.html.pug">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/samples.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
