--- a/mallet/test_code-blocks.html
+++ b/mallet/test_code-blocks.html
@@ -2,15 +2,15 @@
 index: false
 layout: raw
 use_pug: true
-title: Test Code Blocks
-description: A theme development project.
+title: Code blocks
+description: Code block samples.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
 <!-- path        : mallet/test_code-blocks.html -->
 <!-- layout      : _source/_layouts/mallet -->
-<!-- title       : Test Code Blocks -->
-<!-- description : A theme development project. -->
+<!-- title       : Code blocks -->
+<!-- description : Code block samples. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -34,7 +34,10 @@ description: A theme development project.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/templates">Templates</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test">Test</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+              </nav>
+              <hr class="thin"/>
+              <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
               </nav>
               <hr class="thin"/>
               <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
@@ -53,6 +56,12 @@ description: A theme development project.
             <div class="_layout">
               <hr class="thin"/>
               <nav class="_common_nav mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+              </nav>
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+              </nav>
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
