--- a/mallet/index.html
+++ b/mallet/index.html
@@ -57,7 +57,7 @@ description: Mallet is a Jekyll theme for GitHub Pages.
           <main class="_main">
             <article class="_article">
               <div class="_layout">
-                <div style="position:relative">
+                <div class="relative">
                   <div id="icon">⚒️</div>
                 </div>{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
 {{ about | markdownify }}
