--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@ description: A theme development project.
                     <p class="text-grey">We are working on the following themes.</p>
                     <nav>
                       <ul class="rapat">
-                        <li><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
+                        <li><a href="/dove/core/"><b>Core</b></a><i class="icon"><i class="isvg">
                               <svg viewBox="0 0 24 24">
                                 <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                              </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+                              </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
                         </li>
-                        <li><a href="/dove/mallet/"><b>Mallet</b></a><i class="_icon"><i class="isvg">
+                        <li><a href="/dove/mallet/"><b>Mallet</b></a><i class="icon"><i class="isvg">
                               <svg viewBox="0 0 24 24">
                                 <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                              </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                              </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
                         </li>
-                        <li><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
+                        <li><a href="/dove/prime/"><b>Prime</b></a><i class="icon"><i class="isvg">
                               <svg viewBox="0 0 24 24">
                                 <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                              </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                              </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                         </li>
                       </ul>
                     </nav>
