--- a/mallet/index.html
+++ b/mallet/index.html
@@ -67,7 +67,7 @@ description: Mallet is a Jekyll theme for GitHub Pages.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
