--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -34,7 +34,7 @@ description: Theme preview.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
             </div>
@@ -49,7 +49,7 @@ description: Theme preview.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><b>Preview</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
