--- a/mallet/samples.html
+++ b/mallet/samples.html
@@ -51,7 +51,7 @@ description: Theme samples.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <nav class="mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Samples</b>
+              <nav class="mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><b>Samples</b>
               </nav>
               <hr class="thin"/>
             </div>
@@ -64,22 +64,22 @@ description: Theme samples.
                 </div>
                 <h1 class="hero">Theme samples</h1>
                 <h2>⚒️ Essential templates for any website</h2>
-                <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                <nav class="mv"><b>Html</b><i class="icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404">404</a>
+                      </svg></i></i><a href="/dove/mallet/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404">404</a>
                 </nav>
-                <nav class="mv"><b>Md</b><i class="_icon"><i class="isvg">
+                <nav class="mv"><b>Md</b><i class="icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/md/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
+                      </svg></i></i><a href="/dove/mallet/md/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
                 </nav>
                 <div style="margin-top:3rem"></div>
                 <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!
                   
                 </p>
                 <hr class="thin"/>
-                <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
+                <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
                 </nav>{%- if site.github.environment == 'development' -%}
                 <hr class="thin"/>
                 <nav class="mv"><a href="/dove/mallet/test">Test page</a>
@@ -91,7 +91,7 @@ description: Theme samples.
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Samples</b>
+              <nav class="_common_nav mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><b>Samples</b>
               </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
