--- a/nova/page.html
+++ b/nova/page.html
@@ -34,10 +34,10 @@ description: Page template.
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+              <div class="mv"><b>Html</b><i class="icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/nova/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><b>Page</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404">404</a>
+                    </svg></i></i><a href="/dove/nova/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><b>Page</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404">404</a>
               </div>
               <hr class="thin"/>
             </div>
