--- a/prime/index.html
+++ b/prime/index.html
@@ -51,19 +51,19 @@ description: Simple theme for your site.
                   <p class="hero-description">Simple theme for your site.</p>
                 </div>
                 <hr class="thin"/>
-                <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                <nav class="mv"><b>Html</b><i class="icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404">404</a>
+                      </svg></i></i><a href="/dove/prime/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
+                <nav class="mv"><b>Markdown</b><i class="icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/md/home">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/post">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404">404</a>
+                      </svg></i></i><a href="/dove/prime/md/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404">404</a>
                 </nav>
                 <hr class="thin"/>
-                <nav class="mv"><a href="/dove/prime/test_colors">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks">Code blocks</a>
+                <nav class="mv"><a href="/dove/prime/test_colors">Colors</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks">Code blocks</a>
                 </nav>
               </div>
             </article>
