--- a/prime/home.html
+++ b/prime/home.html
@@ -62,9 +62,9 @@ description: Home template
               <div class="_layout">
                 <div class="box no_overflow" id="hero_block">
                   <div class="relative">
-                    <div id="icon">🌌</div>
+                    <div id="icon">🦅</div>
                   </div>
-                  <h1>🌌 Site title</h1>
+                  <h1>🦅 Site title</h1>
                   <h2>Site slogan or description</h2>
                 </div>
                 <hr class="thin"/>
