--- a/prime/index.html
+++ b/prime/index.html
@@ -58,7 +58,7 @@ description: Simple theme for your site.
             <article class="_article">
               <div class="_layout">
                 <div class="relative">
-                  <div id="icon">🌌</div>
+                  <div id="icon">🦅</div>
                 </div>{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
 {{ about | markdownify }}
               </div>
