--- a/prime/samples.html
+++ b/prime/samples.html
@@ -60,10 +60,10 @@ description: Theme samples.
             <article class="_article">
               <div class="_layout">
                 <div class="relative">
-                  <div id="icon">🌌</div>
+                  <div id="icon">🦅</div>
                 </div>
                 <h1 class="hero">Theme samples</h1>
-                <h2>🌌 Essential templates for any website</h2>
+                <h2>🦅 Essential templates for any website</h2>
                 <nav class="mv"><b>Html</b><i class="icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
