fix description grammar (what it looks like to how it looks)

--- a/mallet/samples.html
+++ b/mallet/samples.html
@@ -75,7 +75,7 @@ description: Theme samples.
                       </svg></i></i><a href="/dove/mallet/md/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
                 </nav>
                 <div style="margin-top:3rem"></div>
-                <p><strong><a href="./preview">Preview the theme</a></strong> to see what it looks like and <strong><a href="./#how-to-use">start using it</a></strong> today!
+                <p><strong><a href="./preview">Preview the theme</a></strong> to see how it looks and <strong><a href="./#how-to-use">start using it</a></strong> today!
                   
                 </p>
                 <hr class="thin"/>
